fix: moved css into css file

--- a/index.html
+++ b/index.html
@@ -4,53 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links zu Zeug</title>
-    <style>
-        body {
-            background-color: whitesmoke;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-        .links-container {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
-        .columns {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-        .column {
-            margin: 0 20px;
-        }
-        a {
-            display: block;
-            margin: 10px 0;
-            text-decoration: none;
-            color: black;
-            font-size: 22px;
-        }
-        a:hover {
-            color: #0056b3;
-        }
-        #main-title {
-            font-weight: bold;
-            font-variant: small-caps;
-            padding-bottom: 10px;   
-            font-size: 28px;         
-        }
-        .column-title {
-            font-weight: bold;
-            padding-bottom: 10px;
-            font-size: 24px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="links-container">
