--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <div class="links-container">
-        <a id="main-title">Links zu Zeug</a>
+        <a class="column-title" id="main-title" >Links zu Zeug</a>
         <div class="columns">
             <div class="column">
                 <div class="column-title">Zusammenfassungen</div>
-                <a href="/db_zusammenfassung.html">Datenbanken</a>
-                <a href="/oop_zusammenfassung.html">Objektorientierte Prog.</a>
+                <a class="link" href="/db_zusammenfassung.html">Datenbanken</a>
+                <a class="link" href="/oop_zusammenfassung.html">Objektorientierte Prog.</a>
             </div>
             <div class="column">
                 <div class="column-title">Probeklausuren</div>
-                <a href="/its-probeklausur.html">IT-Sicherheit</a>
-                <a href="/mathe2-probe.html">Mathematik 2</a>
+                <a class="link" href="/its-probeklausur.html">IT-Sicherheit</a>
+                <a class="link" href="/mathe2-probe.html">Mathematik 2</a>
             </div>
         </div>
     </div>
